--- a/index.html
+++ b/index.html
@@ -891,7 +891,7 @@
             </a>
             <nav class="nav">
                 <a href="#features" class="nav-link">Why Us</a>
-                <a href="#process" class="nav-link">Process</a>
+                <a href="team.html" class="nav-link">Team</a>
                 <a href="#included" class="nav-link">Pricing</a>
                 <span class="lang-switch"><a href="index.html" class="active">EN</a> | <a href="tr.html">TR</a></span>
                 <a href="mailto:research@diagnis.ai" class="btn btn-primary">Get Started</a>
