--- a/tr.html
+++ b/tr.html
@@ -868,7 +868,7 @@
             </a>
             <nav class="nav">
                 <a href="#features" class="nav-link">Neden Biz</a>
-                <a href="#process" class="nav-link">Süreç</a>
+                <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="#included" class="nav-link">Hizmetler</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
