Add interactive AI Model Finder quiz

--- a/index.html
+++ b/index.html
@@ -915,11 +915,11 @@
                 Get a trained, validated model for your research — delivered in weeks, not months.
             </p>
             <div class="hero-buttons">
-                <a href="mailto:research@diagnis.ai?subject=Research Project Inquiry" class="hero-btn-primary">
-                    Start Your Project
+                <a href="quiz.html" class="hero-btn-primary">
+                    Find Your AI Model
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
                 </a>
-                <a href="#included" class="hero-btn-secondary">View Pricing</a>
+                <a href="#included" class="hero-btn-secondary">Learn More</a>
             </div>
             <div class="hero-stats">
                 <div class="hero-stat">
