--- a/tr.html
+++ b/tr.html
@@ -894,8 +894,8 @@
                 Araştırmanız için eğitilmiş, doğrulanmış model — aylar değil, haftalar içinde.
             </p>
             <div class="hero-buttons">
-                <a href="mailto:research@diagnis.ai?subject=Araştırma Projesi Talebi" class="hero-btn-primary">
-                    Projenizi Başlatın
+                <a href="quiz.html" class="hero-btn-primary">
+                    AI Model Bul
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="20" height="20"><path d="M5 12h14M12 5l7 7-7 7"/></svg>
                 </a>
                 <a href="#included" class="hero-btn-secondary">Detayları Görün</a>
