--- a/index.html
+++ b/index.html
@@ -513,20 +513,25 @@
         }
         .included-item:last-child { border-bottom: none; }
         .included-icon {
-            width: 24px;
-            height: 24px;
-            background: rgba(34, 197, 94, 0.1);
-            border: 1px solid rgba(34, 197, 94, 0.2);
-            border-radius: 6px;
+            width: 20px;
+            height: 20px;
             display: flex;
             align-items: center;
             justify-content: center;
             flex-shrink: 0;
+            margin-top: 2px;
         }
         .included-icon svg {
-            width: 14px;
-            height: 14px;
-            color: #22c55e;
+            width: 16px;
+            height: 16px;
+            stroke: rgba(255, 255, 255, 0.6);
+            stroke-width: 2;
+            fill: none;
+        }
+        .included-item:hover .included-icon svg {
+            stroke: rgba(255, 255, 255, 0.9);
+            transform: translateY(2px);
+            transition: all 0.3s ease;
         }
         .included-item h5 {
             font-size: 15px;
@@ -765,7 +770,7 @@
                     <ul class="included-list">
                         <li class="included-item">
                             <div class="included-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg>
+                                <svg viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                             </div>
                             <div>
                                 <h5>Discovery & feasibility assessment</h5>
@@ -774,7 +779,7 @@
                         </li>
                         <li class="included-item">
                             <div class="included-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg>
+                                <svg viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                             </div>
                             <div>
                                 <h5>Data pipeline & preprocessing</h5>
@@ -783,7 +788,7 @@
                         </li>
                         <li class="included-item">
                             <div class="included-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg>
+                                <svg viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                             </div>
                             <div>
                                 <h5>Model training & optimization</h5>
@@ -792,7 +797,7 @@
                         </li>
                         <li class="included-item">
                             <div class="included-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg>
+                                <svg viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                             </div>
                             <div>
                                 <h5>Validation & publication metrics</h5>
@@ -801,7 +806,7 @@
                         </li>
                         <li class="included-item">
                             <div class="included-icon">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3"><polyline points="20 6 9 17 4 12"/></svg>
+                                <svg viewBox="0 0 24 24"><path d="M12 4v12m0 0l-4-4m4 4l4-4" stroke-linecap="round" stroke-linejoin="round"/></svg>
                             </div>
                             <div>
                                 <h5>Full IP transfer & documentation</h5>
