Add comparison table and FAQ accordion

--- a/index.html
+++ b/index.html
@@ -1699,6 +1699,26 @@
                 }
             }, { passive: true });
         })();
+
+        // ============================================
+        // 7. FAQ ACCORDION
+        // ============================================
+        document.querySelectorAll('.faq-question').forEach(button => {
+            button.addEventListener('click', () => {
+                const item = button.parentElement;
+                const isActive = item.classList.contains('active');
+                
+                // Close all other items
+                document.querySelectorAll('.faq-item.active').forEach(activeItem => {
+                    if (activeItem !== item) {
+                        activeItem.classList.remove('active');
+                    }
+                });
+                
+                // Toggle current item
+                item.classList.toggle('active', !isActive);
+            });
+        });
     </script>
 </body>
 </html>
