Add Why AI page

--- a/index.html
+++ b/index.html
@@ -983,6 +983,7 @@
                 <span>Diagnis Research Labs</span>
             </a>
             <nav>
+                <a href="why-ai.html" class="nav-link">Why AI?</a>
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link">Team</a>
