Update quiz hooks to Startup Role theme

--- a/ai-quiz.html
+++ b/ai-quiz.html
@@ -950,12 +950,12 @@
         let answered = false;
 
         const resultTiers = [
-            { min: 0, max: 4, icon: "🐟", title: "You're a Goldfish", subtitle: '"AI? Is that a movie?"', color: "#94a3b8" },
-            { min: 5, max: 8, icon: "🐱", title: "You're a Curious Cat", subtitle: '"You\'ve heard of ChatGPT"', color: "#fbbf24" },
-            { min: 9, max: 12, icon: "📊", title: "You're a Data Scientist", subtitle: '"You know your stuff!"', color: "#3b82f6" },
-            { min: 13, max: 16, icon: "🔬", title: "You're an AI Researcher", subtitle: '"Impressive knowledge!"', color: "#8b5cf6" },
-            { min: 17, max: 19, icon: "🏆", title: "You're Yann LeCun", subtitle: '"Almost perfect!"', color: "#f59e0b" },
-            { min: 20, max: 20, icon: "🧠", title: "You're Demis Hassabis", subtitle: '"You ARE artificial intelligence"', color: "#10b981" }
+            { min: 0, max: 4, icon: "💼", title: "Zoom'u açamayan yatırımcı", subtitle: '"AI? That\'s a good buzzword for my pitch deck"', color: "#94a3b8" },
+            { min: 5, max: 8, icon: "📝", title: "ChatGPT'ye prompt yazan stajyer", subtitle: '"Can you make it more... AI-ish?"', color: "#fbbf24" },
+            { min: 9, max: 12, icon: "📊", title: "LinkedIn'de AI paylaşan PM", subtitle: '"Let\'s leverage AI to synergize our workflows"', color: "#3b82f6" },
+            { min: 13, max: 16, icon: "🚀", title: "Series A alan founder", subtitle: '"We\'re not just using AI, we ARE an AI company"', color: "#8b5cf6" },
+            { min: 17, max: 19, icon: "🔥", title: "OpenAI'dan teklif alan mühendis", subtitle: '"I turned down Google for this"', color: "#f59e0b" },
+            { min: 20, max: 20, icon: "👔", title: "Sam Altman'ı kovup geri alan board member", subtitle: '"I\'ve seen things you wouldn\'t believe"', color: "#10b981" }
         ];
 
         function startQuiz() {
