Add Turkish Why AI page

--- a/tr.html
+++ b/tr.html
@@ -867,6 +867,7 @@
                 <div class="logo-text">Diagnis <span>Research Labs</span></div>
             </a>
             <nav class="nav">
+                <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="#features" class="nav-link">Neden Biz</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="#included" class="nav-link">Hizmetler</a>
