Add Turkish AI quiz

--- a/tr.html
+++ b/tr.html
@@ -871,6 +871,7 @@
                 <a href="#features" class="nav-link">Neden Biz</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="#included" class="nav-link">Hizmetler</a>
+                <a href="ai-quiz-tr.html" class="nav-link">🧠 AI Testi</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
