--- a/index.html
+++ b/index.html
@@ -988,6 +988,7 @@
                 <a href="#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link">Team</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
+                <a href="calculator.html" class="nav-link">Calculator</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
         </div>
