Add AI Research Guide

--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
                 <a href="#features" class="nav-link">Features</a>
                 <a href="#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link">Team</a>
+                <a href="guide.html" class="nav-link">📚 AI Guide</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="calculator.html" class="nav-link">Calculator</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
