--- a/team-tr.html
+++ b/team-tr.html
@@ -548,6 +548,7 @@
                 <a href="tr.html" class="nav-link">Ana Sayfa</a>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="team-tr.html" class="nav-link active">Ekip</a>
+                <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <span class="lang-switch"><a href="team.html">EN</a> | <a href="team-tr.html" class="active">TR</a></span>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">İletişim</a>
