--- a/tr.html
+++ b/tr.html
@@ -1003,6 +1003,7 @@
                 <a href="#features" class="nav-link">Özellikler</a>
                 <a href="#process" class="nav-link">Süreç</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
+                <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
