--- a/why-ai-tr.html
+++ b/why-ai-tr.html
@@ -554,6 +554,7 @@
                 <a href="tr.html#features" class="nav-link">Özellikler</a>
                 <a href="tr.html#process" class="nav-link">Süreç</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
+                <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="quiz.html" class="nav-link">AI Bulucu</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Başlayın</a>
             </nav>
