--- a/why-ai.html
+++ b/why-ai.html
@@ -554,6 +554,7 @@
                 <a href="index.html#features" class="nav-link">Features</a>
                 <a href="index.html#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link">Team</a>
+                <a href="guide.html" class="nav-link">📚 AI Guide</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
