--- a/index.html
+++ b/index.html
@@ -989,6 +989,7 @@
                 <a href="team.html" class="nav-link">Team</a>
                 <a href="guide.html" class="nav-link">📚 AI Guide</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
+                <a href="research-finder.html" class="nav-link">🔍 Research Finder</a>
                 <a href="calculator.html" class="nav-link">Calculator</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
