Add Common AI Mistakes interactive guide

--- a/team.html
+++ b/team.html
@@ -514,9 +514,9 @@
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
                 <a href="index.html#features" class="nav-link">Features</a>
-                <a href="index.html#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link active">Team</a>
                 <a href="guide.html" class="nav-link">📚 AI Guide</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
