--- a/tr.html
+++ b/tr.html
@@ -1001,10 +1001,10 @@
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="#features" class="nav-link">Özellikler</a>
-                <a href="#process" class="nav-link">Süreç</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
-                <a href="quiz-tr.html" class="nav-link">AI Bulucu</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
+                <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
