--- a/case-study.html
+++ b/case-study.html
@@ -764,6 +764,8 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
                 <a href="team.html" class="nav-link">Team</a>
+                <a href="guide.html" class="nav-link">📚 AI Guide</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
