--- a/guide.html
+++ b/guide.html
@@ -1062,9 +1062,9 @@
             <nav>
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="tr.html#features" class="nav-link">Özellikler</a>
-                <a href="tr.html#process" class="nav-link">Süreç</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="guide.html" class="nav-link active">📚 AI Rehberi</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Finder</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Başlayın</a>
             </nav>
