--- a/index.html
+++ b/index.html
@@ -985,9 +985,9 @@
             <nav>
                 <a href="why-ai.html" class="nav-link">Why AI?</a>
                 <a href="#features" class="nav-link">Features</a>
-                <a href="#process" class="nav-link">Process</a>
                 <a href="team.html" class="nav-link">Team</a>
                 <a href="guide.html" class="nav-link">📚 AI Guide</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="research-finder.html" class="nav-link">🔍 Research Finder</a>
                 <a href="calculator.html" class="nav-link">Calculator</a>
