--- a/team-tr.html
+++ b/team-tr.html
@@ -549,7 +549,8 @@
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="team-tr.html" class="nav-link active">Ekip</a>
                 <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
-                <a href="quiz-tr.html" class="nav-link">AI Bulucu</a>
+                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
+                <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <span class="lang-switch"><a href="team.html">EN</a> | <a href="team-tr.html" class="active">TR</a></span>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">İletişim</a>
             </nav>
