Add Turkish Sample Size Calculator

--- a/tr.html
+++ b/tr.html
@@ -1006,6 +1006,7 @@
                 <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <a href="research-finder-tr.html" class="nav-link">🔍 Araştırma Bulucu</a>
+                <a href="calculator-tr.html" class="nav-link">📊 Hesaplayıcı</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
