Add Turkish Case Study page

--- a/tr.html
+++ b/tr.html
@@ -1002,11 +1002,8 @@
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="#features" class="nav-link">Özellikler</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
-                <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
-                <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
+                <a href="case-study-tr.html" class="nav-link">Vaka Çalışması</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
-                <a href="research-finder-tr.html" class="nav-link">🔍 Araştırma Bulucu</a>
-                <a href="calculator-tr.html" class="nav-link">📊 Hesaplayıcı</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
