Add Turkish AI Research Guide

--- a/tr.html
+++ b/tr.html
@@ -1002,7 +1002,7 @@
                 <a href="why-ai-tr.html" class="nav-link">Neden AI?</a>
                 <a href="#features" class="nav-link">Özellikler</a>
                 <a href="team-tr.html" class="nav-link">Ekip</a>
-                <a href="case-study-tr.html" class="nav-link">Vaka Çalışması</a>
+                <a href="guide-tr.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
