Add Turkish Common Mistakes page

--- a/index.html
+++ b/index.html
@@ -991,6 +991,7 @@
                 <a href="quiz.html" class="nav-link">AI Finder</a>
                 <a href="research-finder.html" class="nav-link">🔍 Research Finder</a>
                 <a href="calculator.html" class="nav-link">Calculator</a>
+                <a href="careers.html" class="nav-link">🚀 Careers</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
         </div>
