--- a/tr.html
+++ b/tr.html
@@ -1004,6 +1004,7 @@
                 <a href="team-tr.html" class="nav-link">Ekip</a>
                 <a href="guide-tr.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
+                <a href="careers-tr.html" class="nav-link">🚀 Kariyer</a>
                 <div class="lang-switch">
                     <a href="index.html">EN</a> | <a href="tr.html" class="active">TR</a>
                 </div>
