Add Careers page (EN + TR)

--- a/team-tr.html
+++ b/team-tr.html
@@ -551,6 +551,7 @@
                 <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
+                <a href="careers-tr.html" class="nav-link">🚀 Kariyer</a>
                 <span class="lang-switch"><a href="team.html">EN</a> | <a href="team-tr.html" class="active">TR</a></span>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">İletişim</a>
             </nav>
