--- a/team.html
+++ b/team.html
@@ -518,6 +518,7 @@
                 <a href="guide.html" class="nav-link">📚 AI Guide</a>
                 <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="quiz.html" class="nav-link">AI Finder</a>
+                <a href="careers.html" class="nav-link">🚀 Careers</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Get Started</a>
             </nav>
         </div>
