--- a/why-ai-tr.html
+++ b/why-ai-tr.html
@@ -556,6 +556,7 @@
                 <a href="guide.html" class="nav-link">📚 AI Rehberi</a>
                 <a href="mistakes.html" class="nav-link">⚠️ Hatalar</a>
                 <a href="ai-quiz-tr.html" class="nav-link">AI Bulucu</a>
+                <a href="careers-tr.html" class="nav-link">🚀 Kariyer</a>
                 <a href="mailto:research@diagnis.ai" class="nav-cta">Başlayın</a>
             </nav>
         </div>
